# mesmo

./: .coveragerc  .flake8  .gitignore  .gitmodules  .travis.yml  CITATION.bib  Dockerfile  LICENSE  Manifest.toml  Project.toml  README.md  development_setup.py  environment-macos-latest.yml  environment-ubuntu-latest.yml  environment-windows-latest.yml  environment.yml  highs_setup.py  pyproject.toml  setup.py
0.5.0/: .buildinfo  api_reference.html  architecture.html  change_log.html  configuration_reference.html  contributing.html  data_reference.html  examples.html  genindex.html  index.html  installation.html  publications.html  py-modindex.html  search.html
analysis/: analysis.py  input.py  simulation.py  utils.py
data/: cooling_plants.csv  der_cooling_plants.csv  der_ev_chargers.csv  der_models.csv  der_schedules.csv  der_timeseries.csv  der_types.csv  electric_grid_ders.csv  electric_grid_line_types.csv  electric_grid_line_types_assembly.csv  electric_grid_line_types_conductors.csv  electric_grid_line_types_matrices.csv  electric_grid_line_types_overhead.csv  electric_grid_line_types_overhead_conductors.csv  electric_grid_lines.csv  electric_grid_loads.csv  electric_grid_nodes.csv  electric_grid_operation_limit_types.csv  electric_grid_switches.csv  electric_grid_transformer_reactances.csv  electric_grid_transformer_taps.csv  electric_grid_transformer_types.csv  electric_grid_transformers.csv  electric_grids.csv  ev_charger_schedules.csv  ev_charger_timeseries.csv  ev_chargers.csv  fixed_ev_charger_schedules.csv  fixed_ev_charger_timeseries.csv  fixed_ev_chargers.csv  fixed_generator_schedules.csv  fixed_generators.csv  fixed_load_schedules.csv  fixed_load_timeseries.csv  fixed_loads.csv  flexible_generator_schedules.csv  flexible_generators.csv  flexible_load_schedules.csv  flexible_load_timeseries.csv  flexible_loads.csv  (+14 more)
data_raw/: der_models.csv
develop/: .buildinfo  api_reference.html  architecture.html  change_log.html  configuration_reference.html  contributing.html  data_reference.html  examples.html  genindex.html  index.html  installation.html  publications.html  search.html  searchindex.js
docs/: README.md  api.md  api_reference.md  architecture.md  change_log.md  changelog.md  conf.py  configuration_reference.md  contributing.md  data.md  data_reference.md  examples.md  getting_started.md  index.md  installation.md  intro.md  make.jl  publications.md  readthedocs.yml  requirements.txt  software_architecture.md
examples/: additional_electric_grid_ders.csv  aggregate_electric_grids.py  combine_electric_grids.py  diss_dlmp_analyis_prototype.py  electric_grid_mapping.csv  paper_2020_1_dlmp_combined_thermal_electric.py  paper_2020_2_dlmp_combined_thermal_electric.py  paper_2020_3_coordination_thermal_electric.py  paper_2020_dlmp_biogas_rural_germany.py  paper_2020_dlmp_combined_thermal_electric.py  plot_electric_grid.py  plot_electric_grid_utilization.py  run_MES_test_dlmp_combined.py  run_MES_test_dlmp_combined_modified.py  run_api_nominal_operation_problem.py  run_api_optimal_operation_problem.py  run_api_optimal_vs_nominal_operation_problem.py  run_biogas_plant_optimal_operation.py  run_centralised_dispatch.py  run_electric_grid_optimal_operation.py  run_electric_grid_optimal_power_flow_simple.py  run_electric_grid_optimal_power_flow_trust_region.py  run_electric_grid_power_flow_single_step.py  run_electric_grid_power_flow_validation.py  run_flexible_building_optimal_operation.py  run_flexible_der_optimal_operation.py  run_flexible_load_operation.jl  run_market_clearing.py  (+30 more)
(+1556 files in other folders)
